--- a/vignettes/L0-Overview.Rmd
+++ b/vignettes/L0-Overview.Rmd
@@ -24,6 +24,16 @@ Author: Martin Morgan
   (<a href="mailto:mtmorgan@fhcrc.org">mtmorgan@fhcrc.org</a>)<br />
 Date: 26-28 October, 2015<br />
 
+The material in this course requires _R_ version 3.2 and
+_Bioconductor_ version 3.2
+
+```{r configure-test}
+stopifnot(
+    getRversion() >= '3.2' && getRversion() < '3.3',
+    BiocInstaller::biocVersion() == "3.2"
+)
+```
+
 This course provides a broad introduction to the analysis and
 comprehension of high-throughput sequence data using R and
 Bioconductor; many other useful software tools are not discussed.  The
